<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bdot">.</string>
    <string name="b0">0</string>
    <string name="bequal">=</string>
    <string name="bdivision">/</string>
    <string name="bmultiply">*</string>
    <string name="badd">+</string>
    <string name="bsub">-</string>
    <string name="ballclear">All clear</string>
    <string name="display1">Result</string>
    <string name="display2">View</string>
    <string name="bdelete">delete</string>
</resources>